crates/dump/src/reader/v2/snapshots/dump__reader__v2__test__read_dump_v2-11.snap
---
source: dump/src/reader/v2/mod.rs
expression: movies2.settings().unwrap()
---
{
  "displayedAttributes": [
    "*"
  ],
  "searchableAttributes": [
    "*"
  ],
  "filterableAttributes": [],
  "rankingRules": [
    "words",
    "typo",
    "proximity",
    "attribute",
    "exactness"
  ],
  "stopWords": [],
  "synonyms": {},
  "distinctAttribute": null
}
