crates/dump/src/reader/v2/snapshots/dump__reader__v2__test__read_dump_v2-14.snap
---
source: dump/src/reader/v2/mod.rs
expression: spells.settings().unwrap()
---
{
  "displayedAttributes": [
    "*"
  ],
  "searchableAttributes": [
    "*"
  ],
  "filterableAttributes": [],
  "rankingRules": [
    "words",
    "typo",
    "proximity",
    "attribute",
    "exactness"
  ],
  "stopWords": [],
  "synonyms": {},
  "distinctAttribute": null
}
