crates/dump/src/reader/v2/snapshots/dump__reader__v2__test__read_dump_v2-8.snap
---
source: dump/src/reader/v2/mod.rs
expression: movies.settings().unwrap()
---
{
  "displayedAttributes": [
    "*"
  ],
  "searchableAttributes": [
    "*"
  ],
  "filterableAttributes": [],
  "rankingRules": [
    "words",
    "typo",
    "proximity",
    "attribute",
    "exactness",
    "asc(release_date)"
  ],
  "stopWords": [],
  "synonyms": {},
  "distinctAttribute": null
}
